[package]
name = "shadybug"
version = "0.3.0"
edition = "2024" # use 2021 for cargo instruments
license = "MIT OR Apache-2.0"
repository = "https://github.com/HackerFoo/shadybug"
homepage = "https://github.com/HackerFoo/shadybug"
readme = "README.md"
description = "a simple reference software renderer to be used for debugging shaders"
exclude = [ "/images", ".*" ]
categories = [ "rendering", "graphics", "development-tools", "no-std" ]
keywords = [ "gamedev", "graphics", "shader" ]

[dependencies]
glam = "0.29"

# enable rayon for a parallel version of render::render
rayon = { version = "1.10", optional = true }

# only required for examples
png = { version = "0.17", optional = true }

[[example]]
name = "cube"
required-features = [ "png" ]

# always optimize dependencies
[profile.dev.package."*"]
opt-level = 3
debug = true

[profile.dev]
opt-level = 1
debug = true

# for profiling on MacOS, optimize but keep debug info
[profile.profile]
inherits = "release"
debug = "full"
split-debuginfo = "packed"
strip = "none"
